Fix grid spacing

--- a/src/components/ProjectGrid.module.css
+++ b/src/components/ProjectGrid.module.css
@@ -14,6 +14,11 @@
   position: relative;
 }
 
+.image {
+  /* Overrides global image spacing */
+  margin-bottom: 0;
+}
+
 .overlay-link {
   height: 100%;
   position: absolute;
